--- a/evolution/evolution.css
+++ b/evolution/evolution.css
@@ -149,6 +149,19 @@ p {
     border: 1px solid #1DB954;
   }
   
+  /* The actual timeline (the vertical ruler) */
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: rgb(7, 7, 7);
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+    border: 1px solid #1DB954;
+  }
+  
   /* Container around content */
   .container {
     padding: 10px 40px;
@@ -182,10 +195,7 @@ p {
   .right {
     left: 50%;
   }
- /* Add arrows to the left container (pointing right) *
 
-  
-  /* Add arrows to the right container (pointing left) */
   /* Fix the circle for containers on the right side */
   .right::after {
     left: -13px;
@@ -275,12 +285,21 @@ p {
     margin-right: 1vw;
     margin-left: 1vw;
   }
+  .content img{
+    border-radius: 50%;height: 10vw;width: 10vw;border: 4px solid #1DB954 ;margin-top: -1vh;
+  }
 
-  /* Media queries - Responsive timeline on screens less than 600px wide */
+  
   @media screen and (max-width: 1130px) {
-  /* Place the timelime to the left */
+
     .timeline::after {
       left: 31px;
+    }
+    .first-timeline,.second-timeline,.third-timeline,.fourth-timeline,.fifth-timeline,.sixth-timeline{
+      font-size: 2.3vw;
+    }
+    .content{
+      width: fit-content;
     }
   
   /* Full-width containers */
@@ -290,13 +309,7 @@ p {
       padding-right: 25px;
     }
   
-  /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
-    }
+
   
   /* Make sure all circles are at the same spot */
     .left::after, .right::after {
@@ -309,8 +322,26 @@ p {
     }
   }
   @media screen and (max-width: 490px) {
-  h2{
-    font-size: 7vh;
+  .h2-content{
+    width: 14vw;
+    height: 14vw;
+    font-size: 120px;
+  }
+  .head-content h2{
+    margin-top: 90px;
+    font-size: 7vw;
+  }
+  .content img{
+    visibility: hidden;
+  }
+  .head-content p{
+    font-size: 3vw;
+
+  }
+  .scroll_button{
+    font-size: smaller;
+    height:20px;
+    width:fit-content;
   }
   .container-head{
     height: 40vh;
@@ -328,15 +359,10 @@ p {
   display: none;
 }
 .first-timeline,.second-timeline,.third-timeline,.fourth-timeline,.fifth-timeline,.sixth-timeline{
-  font-size: 2.3vw;
+  font-size: 2.9vw;
+  margin-left: 12px;
 }
-h2{
-  font-family:'albert sans';
-  font-size: 10vw;
-  color: #000000;
-  margin: 0;
-  margin-left: -6px;
-}
+
 }
 
   
