--- a/feedback.css
+++ b/feedback.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 body{
    background: linear-gradient(to right,#2397e4 20%,#51a1ca);
     margin: 0;
@@ -39,7 +39,6 @@ body{
   text-decoration: none;
 }
 .topbar-a-3 {
-  color: white;
   cursor: default;
 }
 .topbar-btn > a:hover {
@@ -63,12 +62,12 @@ body{
 }
 .header{
     margin-top: 30px;
-    margin-left: 15px;
+    margin-right: 15vw;
     color:rgb(255, 255, 255);
     font-family: 'Nunito', sans-serif;
 }
 .header h2{
-  margin-left: 105px;
+  margin-left: 185px;
 }
 .forms-header{
     background-color: #ffffff;
@@ -145,7 +144,7 @@ svg:hover{
   border-radius: 3vw;
   height: 3vw;
   width: 7vw;
-  margin-left: 21vw;
+  margin-left: 18vw;
   margin-top: 2vw;
   transition: 0.3s;
 }
@@ -187,11 +186,51 @@ svg:hover{
 }
 .open-main1{
   filter: blur(8px);
-  -webkit-filter: blur(8px);
 }
-@media screen and (max-width: 400px) {
-  .forms-header{
-    height: 100%;
+@media screen and (max-width: 980px) {
+  .emoji svg{
+    visibility: hidden;
+  }
+  h3{
+    visibility: hidden;
   }
   
 }
+@media screen and (max-width: 480px) {
+  .img{
+    visibility: hidden;
+  }
+  .header h2{
+    margin-left: -3px;
+  }
+  .submit{
+    height: 10vw;
+    width: 15vw;
+    font-size: 3vw;
+  }
+  
+}
+@media screen and (max-width: 390px){
+  .img{
+    visibility: hidden;
+  }
+  .header h2{
+    margin-left: -1px;
+    
+  }
+  .forms p{
+    font-size: 10px;
+  }
+  .submit{
+    height: 10vw;
+    width: 15vw;
+    font-size: 3vw;
+   margin-left: 60px;
+   margin-bottom: 90px;
+  }
+ .popup{
+  font-size: 10px;
+  width: 150px;
+ }
+  
+} 
